@@ -2,13 +2,13 @@ package com.example.odyssea.controllers.mainTables;
 
 import com.example.odyssea.dtos.mainTables.ActivityDto;
 import com.example.odyssea.entities.mainTables.Activity;
+import com.example.odyssea.exceptions.ErrorResponse;
 import com.example.odyssea.services.mainTables.ActivityService;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
-import java.util.Collections;
-import java.util.List;
+import java.util.*;
 
 @RestController
 @RequestMapping("/activities")
@@ -20,78 +20,61 @@ public class ActivityController {
         this.activityService = activityService;
     }
 
-    /**
-     * Récupère toutes les activités disponibles
-     */
     @GetMapping
-    public List<Activity> getAllActivities() {
-        return activityService.getAllActivities();
+    public ResponseEntity<List<Activity>> getAllActivities() {
+        return ResponseEntity.ok(activityService.getAllActivities());
     }
 
-    /**
-     * Récupère une activité spécifique par son identifiant (uniquement numérique)
-     */
-    @GetMapping("/{id:\\d+}")
-    public Activity getActivityById(@PathVariable int id) {
-        return activityService.getActivity(id);
+    @GetMapping("/{id}")
+    public ResponseEntity<Activity> getActivityById(@PathVariable int id) {
+        return ResponseEntity.ok(activityService.getActivity(id));
     }
 
-    /**
-     * Crée une nouvelle activité pour une ville donnée
-     */
     @PostMapping
-    public void createActivity(@RequestBody ActivityDto activityDto, @RequestParam int cityId) {
+    public ResponseEntity<Map<String, String>> createActivity(@RequestBody ActivityDto activityDto, @RequestParam int cityId) {
         activityService.createActivity(activityDto, cityId);
+        return ResponseEntity.status(HttpStatus.CREATED).body(Map.of("message", "Activity created successfully"));
     }
 
-    /**
-     * Met à jour une activité existante (identifiant numérique uniquement)
-     */
-    @PutMapping("/{id:\\d+}")
-    public boolean updateActivity(@PathVariable int id, @RequestBody ActivityDto activityDto, @RequestParam int cityId) {
+    @PutMapping("/{id}")
+    public ResponseEntity<Map<String, String>> updateActivity(@PathVariable int id, @RequestBody ActivityDto activityDto, @RequestParam int cityId) {
         Activity activity = activityDto.toActivity(cityId);
-        return activityService.updateActivity(id, activity);
+        activityService.updateActivity(id, activity);
+        return ResponseEntity.ok(Map.of("message", "Activity updated successfully"));
     }
 
-    /**
-     * Supprime une activité par son identifiant
-     */
     @DeleteMapping("/{id}")
-    public boolean deleteActivity(@PathVariable int id) {
-        return activityService.deleteActivity(id);
+    public ResponseEntity<Map<String, String>> deleteActivity(@PathVariable int id) {
+        activityService.deleteActivity(id);
+        return ResponseEntity.ok(Map.of("message", "Activity deleted successfully"));
     }
 
-    /**
-     * Récupère les 5 meilleures activités d'une ville spécifique
-     */
     @GetMapping("/top5")
     public ResponseEntity<?> getTop5ActivitiesByCityId(@RequestParam int cityId) {
         List<Activity> activities = activityService.getTop5ActivitiesByCityId(cityId);
-        if(activities == null){
-            return ResponseEntity.status(HttpStatus.OK)
-                    .body(Collections.singletonMap("message", "Sorry, there are no activities for this city."));
-        }
-        return ResponseEntity.ok(activities);
+        String message = activities.size() == 5 ? "5 activities found." : "Only " + activities.size() + " activities found.";
+        return ResponseEntity.ok(Map.of("message", message, "activities", activities));
     }
 
-    /**
-     * Importe les activités depuis l'API Amadeus pour une ville donnée
-     */
     @PostMapping("/importAndGet")
-    public ResponseEntity<?> importAndGetActivities(@RequestParam int cityId, @RequestParam int radius) {
+    public ResponseEntity<?> importAndGetActivities(@RequestParam int cityId, @RequestParam(defaultValue = "1000") int radius) {
+        activityService.checkCityExists(cityId);
         List<Activity> activities = activityService.getTop5ActivitiesByCityId(cityId);
+
         if (activities.size() < 5) {
-            activityService.importActivitiesFromAmadeus(cityId, radius);
+            activityService.importActivitiesFromGooglePlaces(cityId, radius);
             activities = activityService.getTop5ActivitiesByCityId(cityId);
         }
+
         if (activities.isEmpty()) {
-            return ResponseEntity.ok(Collections.singletonMap("message", "Sorry, there are no activities for this city."));
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(
+                    new ErrorResponse(HttpStatus.NOT_FOUND, "No activities found", "Aucune activité pour la ville " + cityId));
         }
-        return ResponseEntity.ok(activities);
+
+        String message = activities.size() == 5 ? "5 activities found." : "Only " + activities.size() + " activities found.";
+        Map<String, Object> response = new HashMap<>();
+        response.put("message", message);
+        response.put("activities", activities);
+        return ResponseEntity.ok(response);
     }
-
-
-
 }
-
-
